change query and swagger in lot-tracking
